docs: add a dark theme
* Add a dark theme
  The latest bootstrap supports themes out of the box.
  Utilize the dark theme and fix our custom styles that broke in the process.

* Fix the language tag 1px offset issue
  Remove the custom script that added the copy button and use the native solution available with the newer hugo version.
  That script also added the small element on top of the code blocks that showed the language, so this needed to be added back manually.

Signed-off-by: Orzelius <33936483+Orzelius@users.noreply.github.com>
Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/website/assets/scss/_variables_project.scss
+++ b/website/assets/scss/_variables_project.scss
@@ -12,8 +12,8 @@ $primary: #281D49;
 $secondary: #F92A20;
 
 $link-color: $secondary;
-$border-color: $gray-300 !default;
+$link-color-dark: mix(white, $secondary, 20);
 
-$td-sidebar-tree-root-color: $primary !default;
-$td-sidebar-bg-color: rgba($primary, 0.03) !default;
-$td-sidebar-border-color: $border-color !default;
+$border-color: $gray-300 !default;
+$bs-bg-color-dark: #212529;
+
