--- a/website/assets/scss/_sidebar-tree.scss
+++ b/website/assets/scss/_sidebar-tree.scss
@@ -1,164 +1,246 @@
-//
-// Left side navigation
-//
-.td-sidebar-nav {
-    padding-right: 0.5rem;
-    margin-right: -15px;
-    margin-left: -15px;
-
-    @include media-breakpoint-up(md) {
-        @supports (position: sticky) {
-            max-height: calc(100vh - 10rem);
-            overflow-y: auto;
-        }
-    }
-
-
-    @include media-breakpoint-up(md) {
-        display: block !important;
-    }
-
-
-    &__section {
-        li {
-            list-style: none;
-        }
-
-        ul {
-            padding: 0;
-            margin: 0;
-        }
-
-        @include media-breakpoint-up(md) {
-            & .ul-1 ul {
-                padding-left: 1.5em;
-            }
-        }
-
-
-        padding-left: 0;
-    }
-
-    &__section-title {
-        display: block;
-        font-weight: $font-weight-medium;
-
-        .active {
-            font-weight: $font-weight-bold;
-        }
-
-        a {
-            color: $gray-900;
-        }
-    }
-
-    .td-sidebar-link {
-        display: block;
-        padding-bottom: 0.375rem;
-
-        &__page {
-            color: $gray-700;
-            font-weight: $font-weight-light;
-        }
-    }
-
-    a {
-        text-decoration: none;
-
-        &:hover {
-            color: $secondary;
-            text-decoration: none;
-        }
-
-        &.active {
-            font-weight: $font-weight-bold;
-        }
-    }
-
-    .dropdown {
-        a {
-            color: $gray-700;
-        }
-
-        .nav-link {
-             padding: 0 0 1rem;
-        }
-    }
-
-    & > .td-sidebar-nav__section {
-        padding-top: .5rem;
-        padding-left: 1.5rem;
-    }
-
-    li i { // Layout of icons
-        padding-right: 0.5em;
-        &:before{
-            display: inline-block;
-            text-align: center;
-            min-width: 1em;
-        }
-    }
-
-    .td-sidebar-link.tree-root{
-        font-weight: $font-weight-bold;
-        color: $td-sidebar-tree-root-color;
-        border-bottom: 1px $td-sidebar-tree-root-color solid;
-        margin-bottom: 1rem;
-    }
-}
-
-.td-sidebar {
-    @include media-breakpoint-up(md) {
-        padding-top: 4rem;
-        background-color: $td-sidebar-bg-color;
-        padding-right: 1rem;
-        border-right: 1px solid $td-sidebar-border-color;
-    }
-
-
-    padding-bottom: 1rem;
-
-    &__toggle {
-        line-height: 1;
-        color: $gray-900;
-        margin: 1rem;
-    }
-
-    &__search {
-        padding: 1rem 15px;
+@mixin themable-sidebars($text-color, $hover-color, $bg-color, $border-color) {
+    //
+    // Left side navigation
+    //
+    .td-sidebar-nav {
+        padding-right: 0.5rem;
         margin-right: -15px;
         margin-left: -15px;
-    }
-
-    &__inner {
-        order: 0;
 
         @include media-breakpoint-up(md) {
             @supports (position: sticky) {
-                position: sticky;
-                top: 4rem;
-                z-index: 10;
-                height: calc(100vh - 6rem);
+                max-height: calc(100vh - 10rem);
+                overflow-y: auto;
             }
         }
 
 
-        @include media-breakpoint-up(xl) {
-            flex: 0 1 320px;
+        @include media-breakpoint-up(md) {
+            display: block !important;
         }
 
 
-        .td-search-box {
-            width: 100%;
+        &__section {
+            li {
+                list-style: none;
+            }
+
+            ul {
+                padding: 0;
+                margin: 0;
+            }
+
+            @include media-breakpoint-up(md) {
+                & .ul-1 ul {
+                    padding-left: 1.5em;
+                }
+            }
+
+
+            padding-left: 0;
+        }
+
+        &__section-title {
+            display: block;
+            font-weight: $font-weight-medium;
+
+            .active {
+                font-weight: $font-weight-bold;
+            }
+
+            a {
+                color: $text-color;
+            }
+        }
+
+        .tree-root {
+            margin-left: 1rem;
+        }
+
+        .td-sidebar-link {
+            display: block;
+            padding-bottom: 0.375rem;
+
+            &__page {
+                color: $text-color;
+                font-weight: $font-weight-light;
+            }
+        }
+
+        a {
+            text-decoration: none;
+
+            &:hover {
+                color: $hover-color;
+                text-decoration: none;
+            }
+
+            &.active {
+                font-weight: $font-weight-bold;
+            }
+        }
+
+        .dropdown {
+            a {
+                color:  $text-color;
+            }
+
+            .nav-link {
+                    padding: 0 0 1rem;
+            }
+        }
+
+        & > .td-sidebar-nav__section {
+            padding-top: .5rem;
+        }
+
+        ul:not(.ul-1, .ul-0) {
+            &, li label { // Layout of icons
+                padding-right: 0.5em;
+                &:before{
+                    margin-left: -1.5rem;
+                    display: inline-block;
+                    text-align: center;
+                    min-width: 1em;
+                }
+            }
+        }
+
+        .td-sidebar-link.tree-root{
+            font-weight: $font-weight-bold;
+            color: $text-color;
+            border-bottom: 1px $border-color solid;
+            margin-bottom: 1rem;
         }
     }
 
-    #content-desktop {display: block;}
-    #content-mobile {display: none;}
+    .td-sidebar {
+        @include media-breakpoint-up(md) {
+            padding-top: 4rem;
+            background-color: $bg-color;
+            padding-right: 1rem;
+            border-right: 1px $border-color solid;
+        }
 
-    @include media-breakpoint-down(md) {
 
-    #content-desktop {display: none;}
-    #content-mobile {display: block;}
+        padding-bottom: 1rem;
+
+        &__toggle {
+            line-height: 1;
+            color:  $text-color;
+            margin: 1rem;
+        }
+
+        &__search {
+            padding: 1rem 15px;
+            margin-right: -15px;
+            margin-left: -15px;
+        }
+
+        &__inner {
+            order: 0;
+
+            @include media-breakpoint-up(md) {
+                @supports (position: sticky) {
+                    position: sticky;
+                    top: 4rem;
+                    z-index: 10;
+                    height: calc(100vh - 6rem);
+                }
+            }
+
+
+            @include media-breakpoint-up(xl) {
+                flex: 0 1 320px;
+            }
+
+
+            .td-search-box {
+                width: 100%;
+            }
+        }
+
+        #content-desktop {display: block;}
+        #content-mobile {display: none;}
+
+        @include media-breakpoint-down(md) {
+
+        #content-desktop {display: none;}
+        #content-mobile {display: block;}
+        }
     }
+
+    //
+    // Right side toc
+    //
+    .td-sidebar-toc {
+        background-color: $bg-color;
+        border-left: 1px solid $border-color;
+    
+        @supports (position: sticky) {
+            position: sticky;
+            top: 4rem;
+            overflow-y: auto;
+        }
+    
+        order: 2;
+        padding-top: 0.75rem;
+        padding-bottom: 1.5rem;
+        vertical-align: top;
+    
+    }
+    
+    .td-page-meta {
+        a {
+            text-decoration: none;
+            display: block;
+            font-weight: $font-weight-medium;
+        }
+    }
+    
+    .td-toc {
+    
+        a {
+            text-decoration: none;
+            display: block;
+            font-weight: $font-weight-light;
+            padding-bottom: .25rem;
+        }
+    
+        li {
+            list-style: none;
+            display: block;
+        }
+    
+        li li {
+            margin-left: 0.5rem;
+        }
+    
+        #TableOfContents {
+            // Hugo's ToC is a mouthful, this can be used to style the top level h2 entries.
+            > ul > li > ul > li > a {}
+    
+            a {
+                color: $text-color;
+    
+                &:hover {
+                    color: $hover-color;
+                    text-decoration: none;
+                }
+            }
+        }
+    
+        ul {
+            padding-left: 0;
+        }
+    }
+}
+
+
+html[data-bs-theme="dark"] {
+    @include themable-sidebars(white, mix($secondary, white, 80), mix($gray-900, black, 90), black);
+}
+
+html[data-bs-theme="light"] {
+    @include themable-sidebars( black, $secondary, $gray-100, $gray-300)
 }
