--- a/website/assets/scss/_styles_project.scss
+++ b/website/assets/scss/_styles_project.scss
@@ -1,3 +1,5 @@
+@import 'td/code-dark';
+
 .version-banner {
     position: sticky;
     top: 5rem;
@@ -11,4 +13,30 @@
 
 .td-page-meta__child { 
     display: none !important; 
+}
+
+blockquote {
+    border-color: $secondary !important;
+}
+
+@mixin code-type($bg-color) {
+    .code-type {
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-top: 1px solid $secondary;
+        background-color: $bg-color;
+        width: fit-content;
+        padding-top: 1px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }    
+}
+
+
+html[data-bs-theme="dark"] {
+    @include code-type($primary)
+}
+
+html[data-bs-theme="light"] {
+    @include code-type($gray-100)
 }
